# citation-auditor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
citation_auditor/: __init__.py  __main__.py  docx.py  models.py  prepare.py  render.py  report.py
commands/: audit.md
docs/: audit-20260427-engineering-design.md  day1-mcp-resolution.md  docx-audit-plan-20260426.md  v1.4-docx-e2e-status-20260427.md
docs/ko/: README.md
fixtures/: README.md  civics-brief.md  climate-brief.md  v1.2-global-legal.md  v1.4-docx-legal.docx  v1.4-docx-legal.expected.md
fixtures/seeded/: civics-brief.md  climate-brief.md
scripts/: vendor-into.sh
skills/: README.md
skills/citation-auditor/: SKILL.md
skills/verifiers/general-web/: SKILL.md
skills/verifiers/korean-law/: SKILL.md
tests/: __init__.py  conftest.py  test_aggregation.py  test_chunking.py  test_cli.py  test_docx.py  test_docx_fixture.py  test_korean_law.py  test_local_only_contract.py  test_models.py  test_render.py  test_report.py  test_vendor_script.py  test_verifier_metadata.py
