[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citation-auditor"
version = "0.1.1"
description = "Audit markdown claims and re-emit annotated markdown with verification badges."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "marko>=2.1.0",
  "pydantic>=2.7.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
